fixed fullscreen nav spacing

--- a/css/responsive.css
+++ b/css/responsive.css
@@ -16,9 +16,6 @@
   #mobileMenu {
     display: none;
   }
-  nav ul li:nth-child(2) {
-    margin-left: 1em;
-  }
 }
 
 /* Responsive layout - makes the two columns stack on top of each other instead of next to each other */
